--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "My webpack project",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode=development --host 0.0.0.0",
+    "start": "webpack serve --node-env=local --host 0.0.0.0",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development --node-env=development",
+    "build": "webpack  --node-env=production",
+    "build:dev": "webpack  --node-env=development",
     "watch": "webpack --watch"
   },
   "repository": {
